navbar spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* .App {
-  text-align: center;
-} */
+.App {
+  color: rgba(255, 255, 255, 0.7);
+}
 
 .App-logo {
   height: 40vmin;
@@ -38,6 +38,6 @@
 }
 
 body {
-  background-color: #E29C45;
+  background-color: black;
   background-size: cover;
 }
